--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-maps": "^1.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
     "react-native-vector-icons": "^10.0.0",
