--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "^13.4.0",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
